# mlperf

./: .gitignore  .mlc-log.txt  LOAD.md  Makefile  Makefile.ubuntu  compute_ratio.py  infer_v2.json  plot_workload_schedule.py  pyproject.toml  test.sh  vit_throughput.csv
calibration/BraTS/: README.md
calibration/CriteoTerabyte/: README.md
calibration/KiTS/: README.md
custom/: loadgen_workload.py  plot_workload_schedule.py  workload.csv  workload.py  workload_kserve_schedule.csv  workload_schedule.csv
custom_loadgen/: README.md  generate_proto.sh  loadgen_runner.py  metrics.py  qsl.py  sut.py  workload_config.py
custom_loadgen/proto/: scheduler.proto
fakeserver/: .gitignore  README.md  loadgen_workload.py  pyproject.toml  run.py
fakeserver/fakeserver/: __init__.py  server.py
language/bert/: bert_tf_to_pytorch.py
language/mixtral-8x7b/standalone_infer/: README.md
loadgen/: mlperf_conf.h
profiling/: README.md  TODO.md  batch_testing.py  benchmark.py  latency.py  throughput.py  vit_benchmark.py
profiling/result/: bert_onnx_latency.csv  bert_onnx_latency_dump.csv  bert_onnx_throughput.csv  resnet50_onnx_latency.csv  resnet50_onnx_latency_dump.csv  resnet50_onnx_throughput.csv  vit_onnx_latency.csv  vit_onnx_latency_dump.csv  vit_onnx_throughput.csv
scheduler/: README.md  __init__.py  server.py
serving/: README.md
serving/scripts/: download_model.sh  export_bert_onnx.py  export_resnet50_onnx.py  export_vit_onnx.py  export_yolo_onnx.py  run_download_with_uv.py  setup_triton_repo.py  test_triton_inference.py  test_triton_vit_inference.py
(+19 files in other folders)
