[project]
name = "fakeserver"
version = "0.1.0"
description = "Fake model server for ResNet, YOLO, BERT (sleep + fake response, no GPU)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.28.0",
    "mlcommons-loadgen>=6.0.0",
]

[tool.uv]
dev-dependencies = []
